# KabanApp_FullStack_Agents

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
.agent/rules/: strategy.md
.claude/: ralph-loop.local.md
backend/: pyproject.toml
backend/.agent/rules/: strategy.md
backend/app/: ai.py  auth.py  db.py  main.py
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_auth.py  test_auth_api.py  test_board_api.py  test_boards.py  test_card_features.py  test_comments.py  test_e2e.py  test_labels.py  test_main.py  test_stats_search.py
docs/: DATABASE.md  PLAN.md  TODO.md  code_review.md  schema.json
frontend/: package-lock.json  package.json
frontend/.agent/rules/: strategy.md
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AiChatSidebar.test.tsx  AiChatSidebar.tsx  AuthContext.tsx  BoardFilterBar.test.tsx  BoardFilterBar.tsx  BoardStats.tsx  CardDetailModal.test.tsx  CardDetailModal.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginPage.test.tsx  LoginPage.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
